k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempconv-frontend
  namespace: tempconv
  labels:
    app: tempconv-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tempconv-frontend
  template:
    metadata:
      labels:
        app: tempconv-frontend
    spec:
      containers:
        - name: frontend
          image: europe-west1-docker.pkg.dev/tempconvertor-485913/tempconv/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "64Mi"
              cpu: "100m"
